# HEIC-to-JPEG-converter

./: CMakeLists.txt  Cargo.toml  README.md  app.code-workspace  build-complete.sh  build-libheif.sh  build-rust-only.ps1  build-rust.ps1  build-rust.sh  build.gradle.kts  dummy.cpp  privacy.md  test-build.sh
TooJpeg-rust/: Cargo.toml  README.md
TooJpeg-rust/benches/: benchmark.rs  benchmarks.rs
TooJpeg-rust/examples/: png_to_jpeg.rs  simple.rs
TooJpeg-rust/src/: lib.rs  toojpeg.rs
TooJpeg-rust/tests/: integration.rs
src/: buildtips.md  lib.rs
src/androidTest/java/com/example/heictojpeg/: ExampleInstrumentedTest.kt
src/main/: AndroidManifest.xml
src/main/java/com/example/heictojpeg/: BillingManager.kt  MainActivity.kt  NativeLib.kt  SplashActivity.kt
src/main/java/com/example/heictojpeg/gui/: README.md  THEMING_GUIDE.md
src/main/java/com/example/heictojpeg/gui/utils/: ImageUtils.kt
src/main/java/com/example/heictojpeg/ui/theme/: Theme.kt  ThemeOption.kt  Type.kt
