[package]
name = "toojpeg"
version = "0.1.0"
edition = "2021"
description = "A Rust port of the TooJpeg JPEG encoder with performance optimizations"
repository = "https://github.com/yourusername/TooJpeg-rust"
license = "MIT"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
keywords = ["jpeg", "image", "codec", "encoder"]
categories = ["multimedia::encoding"]

documentation = "https://docs.rs/toojpeg"
homepage = "https://github.com/yourusername/TooJpeg-rust"

[lib]
name = "toojpeg"
path = "src/lib.rs"
bench = false

[features]
default = ["std"]
std = []  # For no_std support in the future


# Core dependencies

[dependencies]
clap = { version = "4.0", features = ["derive"]}
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
rand = "0.8"
# Core dependencies

[dev-dependencies]

[dev-dependencies.criterion]
version = "0.5"
features = ["html_reports"]

[[bench]]
name = "benchmarks"
harness = false
